[gd_scene load_steps=13 format=3 uid="uid://cmgwljrr5mu74"]

[ext_resource type="Script" path="res://scenes/subscenes/props/shop.gd" id="1_esqss"]
[ext_resource type="Texture2D" uid="uid://cscal68cgpjpp" path="res://assets/shop/shop_anim.png" id="2_xpom5"]
[ext_resource type="Texture2D" uid="uid://dcxwa3io37ssl" path="res://assets/GUI/Keyboard/Buttons/tile016.png" id="3_yasgy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gvky7"]
atlas = ExtResource("2_xpom5")
region = Rect2(0, 0, 118, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0hopt"]
atlas = ExtResource("2_xpom5")
region = Rect2(118, 0, 118, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pfqdx"]
atlas = ExtResource("2_xpom5")
region = Rect2(236, 0, 118, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_llwx3"]
atlas = ExtResource("2_xpom5")
region = Rect2(354, 0, 118, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bro8w"]
atlas = ExtResource("2_xpom5")
region = Rect2(472, 0, 118, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xci6w"]
atlas = ExtResource("2_xpom5")
region = Rect2(590, 0, 118, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_y6yis"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gvky7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0hopt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfqdx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_llwx3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bro8w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xci6w")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qhycb"]
texture = ExtResource("3_yasgy")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dmqmc"]
size = Vector2(232, 204.5)

[node name="shop" type="Area2D"]
script = ExtResource("1_esqss")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_y6yis")
autoplay = "default"
frame_progress = 0.102857

[node name="PanelSign" type="Panel" parent="AnimatedSprite2D"]
visible = false
texture_filter = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -65.25
offset_top = -0.25
offset_right = -53.25
offset_bottom = 11.75
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_qhycb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4, 153.25)
shape = SubResource("RectangleShape2D_dmqmc")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
